# genetic-algorithms

./: CITATION.cff  LICENSE.txt  README.md  algorithme_genetique_ex2.ipynb  contour_actif_avec_AG.m  contour_actif_classique.m  fonctions.py  illustrations.m  print_python_modules_version.py  pyproject.toml  reglage_energie_externe.m  test_rho_max.m
1D_example/: 1D_example.ipynb  algorithme_genetique_ex2.m  descente_de_gradient.m  fonctions.py  tests.ipynb
2D_example_Image_segmentation/: LICENCE.txt  algorithme_genetique_ex2.ipynb  contour_actif_avec_AG.m  contour_actif_classique.m  illustrations.m  reglage_energie_externe.m  test_rho_max.m
Ex_algorithme genetique/: algorithme_genetique_ex1.m  algorithme_genetique_ex2.m  dec2gc.m  descente_de_gradient.m
activeContoursSnakesDemo/: interate.m
src/genetic_algorithms/: __init__.py
