[project]
name = "genetic-algorithms"
version = "0.1.0"
description = "Simple examples of genetic algorithms, MATLAB & Python"
authors = [
    { name = "Sébastien Mestrallet", email = "sebastien.mestrallet@hey.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "plotly>=5.21.0",
    "ipython>=8.23.0",
    "ipykernel>=6.29.4",
    "nbformat>=5.10.4",
    "kaleido>=0.2.1",
    "rich>=13.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/genetic_algorithms"]
